[gd_scene load_steps=6 format=3 uid="uid://dqj4lljqukau0"]

[ext_resource type="PackedScene" uid="uid://dy74uem5hkkcd" path="res://EntityBase.tscn" id="1_c0fur"]
[ext_resource type="Texture2D" uid="uid://btb81iff1nocb" path="res://Weapons/BottomlessChickenPouch/assets/bottomlesschickenpouch_projectile.png" id="2_ca001"]
[ext_resource type="Script" uid="uid://80j5sm5l4ubp" path="res://Weapons/BottomlessChickenPouch/bottomless_chicken_pouch_projectile.gd" id="2_r38jh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r38jh"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qfp27"]
radius = 8.0

[node name="BottomlessChickenPouchProjectile" instance=ExtResource("1_c0fur")]
collision_layer = 64
collision_mask = 112
lock_rotation = false
script = ExtResource("2_r38jh")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_r38jh")

[node name="Sprite2D" parent="." index="1"]
texture = ExtResource("2_ca001")

[node name="EnemyCollider" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollider" index="0"]
shape = SubResource("CircleShape2D_qfp27")

[node name="LifeTimer" type="Timer" parent="." index="3"]
wait_time = 0.4
one_shot = true
autostart = true

[connection signal="body_entered" from="EnemyCollider" to="." method="_on_enemy_collider_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
